# tcss445project

./: Cargo.toml  flake.nix  justfile  package.nix
src/: main.rs  menu.rs  sqlite.rs
